# GGJ-2023

./: Cargo.toml  README.md  sc
assets/: map.json
assets/resources/: beetroot.xcf  bush.xcf  carrot.xcf  chef's knife.xcf  credit.xcf  dirt.xcf  gun-1-alt.xcf  gun-1.xcf  gun-2.xcf  knife.xcf  pepper.xcf  potato.xcf  spoon.xcf  stump.xcf  turret-1.xcf  turret-2.xcf
src/: components.rs  interpolation.rs  main.rs  systems.rs  textures.rs  ui.rs
